<resources>
    <string name="app_name">ProjectBus</string>
    <string name="full_name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="Gender">Gender</string>
    <string name="bus">Bus Route</string>
    <string name="area">Area</string>
    <string name="pickuppoint">Pick Up Point</string>
    <string name="register">Register</string>
    <string name="choosegender">Choose Gender</string>
    <string name="chooseArea">Choose Area</string>
    <string name="choosepickup">Choose PickUp Point</string>
    <string name="YourBus">Your Bus</string>
    <string name="bus_image">busimage</string>
    <string name="route_11">Route #11</string>
    <string name="starting_at">Starting At</string>
    <string name="_8_00_am">8.00 AM</string>
    <string name="title_activity_tracking">Map</string>
    <string name="routeNumber">Route #</string>
    <string name="start_trip">Start Trip</string>
    <string name="license">License</string>
    <string name="chooseLicense">Choose License</string>
    <string name="title_activity_bus_live_location_tracker">Map</string>
    <string name="locationpermstitle">Location Permission Needed</string>
</resources>
