<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.atribus.projectbus.User.UserHomeActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_aboutbus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="08dp"
        android:layout_marginLeft="08dp"
        android:layout_marginRight="08dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="5dp"
                android:text="@string/YourBus"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/bus_image"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_bus" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="10dp"
                    android:text="@string/route_11"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvtv_starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/starting_at"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tv_starttime"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/_8_00_am"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:weightSum="2">

                <Button
                    android:id="@+id/btn_locate"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Locate on maps" />


                <Button
                    android:id="@+id/btn_boarded"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="boarded" />


            </LinearLayout>

          <!--  <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
               android:text=""
                />-->
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
